Shruthi | Tweaking failsafe plugin configs to check if the build is any faster